--- a/style.css
+++ b/style.css
@@ -454,8 +454,8 @@ nav {
   margin-top: 100px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
 .separators {
   width: 100%;
