--- a/style.css
+++ b/style.css
@@ -533,6 +533,7 @@ nav {
   cursor: pointer;
 }
 .topic2 {
+  width: 583px;
   align-items: center;
   justify-content: center;
   font-size: 20px;
@@ -559,7 +560,9 @@ nav {
   color: #525665;
   border-bottom: 0;
 }
+
 .topic3 {
+  width: 583px;
   align-items: center;
   justify-content: center;
   font-size: 20px;
