--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 0;
+  margin: 0;
 }
 nav {
   display: flex;
