--- a/style.css
+++ b/style.css
@@ -25,7 +25,17 @@ nav {
   font-family: "Mulish", sans-serif;
   margin-left: 5px;
 }
-
+.metin {
+  line-height: 12px;
+}
+.metin > span {
+  font-size: 32px;
+  display: none;
+  cursor: pointer;
+}
+.metin > span:hover {
+  opacity: 0.6;
+}
 .metin > ul {
   display: flex;
   flex-direction: row;
@@ -94,7 +104,6 @@ nav {
 
 .bacground > div > div > h4 > img {
   width: 100px;
-  height: 50px;
   margin-top: 10px;
 }
 .bacground > div > div > h4 > div > img {
@@ -1471,4 +1480,85 @@ hr.wan1 {
   color: #242f65;
   margin-top: 0;
   margin-bottom: 30px;
+}
+
+@media screen and (max-width: 840px) {
+  nav {
+    width: 90%;
+    position: relative;
+  }
+  .metin > ul {
+    position: absolute;
+    top: 46px;
+    left: 0;
+    flex-direction: column;
+    padding: 0;
+    background-color: #ff774c;
+    width: 100%;
+    border-radius: 16px;
+    overflow: hidden;
+    display: none;
+    z-index: 100;
+  }
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  @keyframes fadeOut {
+    0% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+  .metin > ul > li {
+    margin: 0;
+    border-bottom: 1px solid #ff9575;
+    color: #333;
+    line-height: 50px;
+    cursor: pointer;
+  }
+  .metin > ul > li:hover {
+    background-color: #ff8762;
+  }
+  .metin > ul > li:last-child {
+    border: 0;
+  }
+  .metin > span {
+    display: block;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .bacground > div > div > h1 {
+    font-size: 44px;
+  }
+  .bacground > div > div > h4,
+  .bacground > div > div > h4 > span {
+    font-size: 22px !important;
+  }
+  .bacground > div > div > h4 > img {
+    width: 60px;
+  }
+  .separator,
+  .made,
+  .made1,
+  .made2,
+  .made3,
+  .newss,
+  .back-color,
+  .separators1,
+  .backrounnd,
+  .separator2,
+  .work,
+  .separatorr,
+  .newss2,
+  .futer {
+    display: none;
+  }
 }
