--- a/style.css
+++ b/style.css
@@ -1647,6 +1647,7 @@ hr.wan1 {
     width: 171px;
     height: 40px;
     margin-left: -10px;
+    margin-top: -3px;
   }
   .buttoon {
     padding: 15px 25px;
