--- a/style.css
+++ b/style.css
@@ -1963,30 +1963,30 @@ hr.wan1 {
     flex-direction: column;
   }
   .develops > img {
-    width: 80%;
+    width: 100%;
     margin-left: 10%;
   }
   .develops1 {
-    width: 80%;
+    width: 100%;
     margin-left: 10%;
   }
   .develops > p {
-    width: 80%;
+    width: 100%;
     margin-left: 10%;
     color: #525665;
   }
 
   .template > img {
-    width: 80%;
-    margin-left: 19%;
+    width: 90%;
+    margin: 19%;
   }
   .template1 {
     width: 60%;
-    margin-left: 30%;
+    margin-left: 19%;
   }
   .template > p {
-    width: 50%;
-    margin-left: 30%;
+    width: 80%;
+    margin-left: 19%;
     color: #525665;
   }
   .btn {
@@ -1996,7 +1996,7 @@ hr.wan1 {
     padding: 16px 32px;
     text-align: center;
     font-size: 16px;
-    margin-left: 40%;
+    margin-left: 19%;
     opacity: 1;
     transition: 1s;
     border-radius: 20px;
