--- a/style.css
+++ b/style.css
@@ -1563,7 +1563,7 @@ hr.wan1 {
     width: 100%;
   }
   .line-h {
-    width: 124px;
+    width: 90px;
   }
   .line-v {
     height: 20px;
@@ -1586,7 +1586,7 @@ hr.wan1 {
   }
   .easy {
     font-size: 12px;
-    margin-left: 10px;
+    margin-right: 20px;
   }
   .buttons {
     padding: 15px 25px;
@@ -1599,7 +1599,8 @@ hr.wan1 {
     border: none;
     border-radius: 15px;
     box-shadow: 0 9px #999;
-    margin-left: 35px;
+    margin-left: 24px;
+    margin-top: 20px !important;
   }
 
   .buttons:hover {
@@ -1622,7 +1623,8 @@ hr.wan1 {
     border-radius: 15px;
     box-shadow: 0 9px #999;
     width: 171px;
-    margin-left: 35px;
+    margin-left: 24px;
+    margin-top: 40px !important;
   }
 
   .button:hover {
@@ -1636,12 +1638,14 @@ hr.wan1 {
   }
   .page {
     font-size: 14px;
+    margin-right: 20px;
   }
   .roww > .buttoon {
     font-size: 12px;
     width: 171px;
     height: 40px;
-    margin-left: 35px !important;
+    margin-left: 24px !important;
+    margin-top: 40px !important;
   }
   .buttoon {
     font-size: 16px;
